8269222: Incorrect number of workers reported for reference processing

Reviewed-by: tschatzl, sangheki